feat: implement microservices code structure
- Add internal clients and controllers for inter-service communication
- Update DTOs and mappers for new architecture
- Configure OpenAPI specs for internal APIs
- Update service pom.xml configurations
- Add RatingCacheSyncService for cache synchronization